kubernetes/board-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
  namespace: board
spec:
  replicas: 3
  selector:
    matchLabels:
      app: board
  template:
    metadata:
      labels:
        app: board
    spec:
      containers:
        - name: board
          image: 590183823453.dkr.ecr.ap-northeast-1.amazonaws.com/board:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: board
  namespace: board
spec:
  selector:
    app: board
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
