kubernetes/different-ns-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-app
  namespace: board
  labels:
    app: board-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: board-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 1
  template:
    metadata:
      labels:
        app: board-app
        project: seoulit
        env: production
        version: v2
    spec:
      containers:
      - name: board-app
        image: 590183823453.dkr.ecr.ap-northeast-2.amazonaws.com/board:1.0

        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: hello
  labels:
    app: hello-app
#  annotations:
#    "kubernetes.io/change-cause": "initial image 1.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 1
  template:
    metadata:
      labels:
        app: hello-app
        project: seoulit
        env: production
        version: v6
    spec:
      containers:
        - name: hello-app
          image: 590183823453.dkr.ecr.ap-northeast-2.amazonaws.com/hello:1.0
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: board-app
  namespace: board
  labels:
    service: board
spec:
  type: LoadBalancer
  selector:
    app: board-app
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
spec:
  selector:
    app: hello-app
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
